# cephalon

./: .eslintrc.json  .gitignore  README.md  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  remix.config.js  sim.py  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js  workerbuild.json
.github/workflows/: tests.yml
app/: root.tsx
app/routes/: AncientGoldDragon.tsx  BASpells.tsx  ConditionImmunities.tsx  Couatl.tsx  Damage.tsx  PointBuy.tsx  Saves.tsx  ToHits.tsx  _index.tsx
arcane/: arcane.py  damage_proxy.py  pyproject.toml
arcane/data/: ancient_gold_dragon_spells_by_target.json  ancient_gold_dragon_targets_by_spell.json  coautl_spells_by_target.json  coautl_targets_by_spell.json  condition_immunities.feather  monster_to_hits.feather  perception.feather  saves_by_cr.feather
arcane/lib/: svg_stack.py
components/: BestiaryFilter.navbar.tsx  BestiaryFilter.tsx  ConditionImmunity.graph.tsx  CreatureList.tsx  DamageGraphs.tsx
components/DamagerCard/: DamagerCard.tsx  PlayerCard.tsx
components/condition/: ConditionImmunity.graph.tsx
components/damage/: DamageGraphs.tsx  Target.navbar.tsx
modules/condition/: BestiaryFilter.navbar.tsx  ConditionImmunity.graph.tsx  CreatureList.tsx
modules/damage/: DamageGraphs.tsx  Target.navbar.tsx  constants.ts  constants.tsx  damageData.hook.ts  types.tsx  (+1 more)
pages/: Clip.tsx  ConditionImmunities.tsx  Damage.tsx  _app.tsx  index.tsx
public/: diceRollWorker.js  mathWorker.js
styles/: styles.css
test/: data.ts  math.test.ts
utils/: math.ts  math.tsx
(+115 files in other folders)
