[tool.poetry]
name = "dndviz"
version = "0.1.0"
description = ""
authors = ["Zenith <z@zenith.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
falcon = "^3.1.0"
pandas = "^1.4.2"
uvicorn = "^0.17.6"
pyarrow = "^7.0.0"
gunicorn = "^20.1.0"
starlette = "^0.20.0"
CairoSVG = "^2.5.2"
Wand = "^0.6.7"
svg-stack = "^0.1.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
