[tool.poetry]
name = "dndviz"
version = "0.1.0"
description = ""
authors = ["Zenith <z@zenith.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
falcon = "^3.1.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
starlette = "^0.20.0"
CairoSVG = "^2.5.2"
Wand = "^0.6.7"
svg-stack = "^0.1.0"
lxml = "^4.8.0"
weasyprint = "^56.0"
pyvips = "^2.2.1"
pandas = "^2.0.3"
pyarrow = "^12.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
